@@ -165,11 +165,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-
                     <useSystemClassLoader>false</useSystemClassLoader>
-
                     <argLine>@{argLine} -Xmx750M -XX:+UseG1GC -XX:MaxGCPauseMillis=100
-                        -Djava.library.path=${project.basedir}/../Ant-Media-Server/src/main/server/lib/native
+                        -Djava.library.path=${project.basedir}/../Ant-Media-Server/src/main/server/lib/native --illegal-access=permit
                     </argLine>
                 </configuration>
             </plugin>
